Add Email Service

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ REFRESH_TOKEN_SECRET=d6bc8b5464f11f540d19faac3401ae23bc4aed31f3bbce2a32a994d4688
 BASE_URL=http://localhost:5000
 CLIENT_URL=http://localhost:5000
 
+EMAIL_SERVICE=gmail
 EMAIL_USER=
 EMAIL_PASS=
 
